--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,37 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  
 }
+
+/* Scrollbar Styling for Webkit-based browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #011833;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #011833;
+  border-radius: 6px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #011833;
+}
+
+/* Styling for Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #011833 #011833;
+}
+
 
 html, body {
   min-height: 100vh;
