--- a/src/components/allcountry/AllCountry.css
+++ b/src/components/allcountry/AllCountry.css
@@ -34,3 +34,42 @@
     align-items: center;
 }
 
+.countryC{
+    flex: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.countryV{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.editConatiner{
+    flex: 1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+}
+
+.c-iconContainer{
+ 
+    height: 4rem;
+    width: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    padding-left: 2px;
+  }
+  
+   .c-icon{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+   }
