--- a/src/components/pushnotification/PushNotification.css
+++ b/src/components/pushnotification/PushNotification.css
@@ -14,6 +14,17 @@
     overflow-y: scroll;
     max-height: 60vh;
    
+   
+}
+
+.pnAUMainContainer{
+    flex: 1;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    max-height: 80vh;
+   
 }
 
 .hdAllContainer{
@@ -36,6 +47,17 @@
     flex-direction: column;
     overflow-y: scroll;
     max-height: 70vh;
+
+}
+
+.alluAUMainContainer{
+    flex: 1;
+    border-radius: 2rem;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    height: 40vh;
+
 }
 
 .allNotificataionContainer{
