--- a/src/components/alllocation/AllLocation.css
+++ b/src/components/alllocation/AllLocation.css
@@ -86,6 +86,14 @@
     padding-right: 1rem;
 }
 
+.lcnamelimit{
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .allContentContainer-al:hover{
     border: 2px solid var(--green); /* Change border color on hover */
     cursor: pointer;
