--- a/src/components/play/PlayLocation.css
+++ b/src/components/play/PlayLocation.css
@@ -17,8 +17,6 @@
 
 
   .PLCotentContainer {
-    min-height: 15rem;
-
     
     padding: 1rem;
     display: flex;
@@ -32,6 +30,17 @@
     width: 20%; /* Fixed width for the left container */
     height: 100%;
 
+  }
+
+  .PLPIContentCTop{
+   height: 100%;
+   width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 1rem;
+    align-items: center;
+    
   }
   
   .PLCotentContainerRight {
