APP LINK , MANY MORE

--- a/src/components/allresult/AllResults.css
+++ b/src/components/allresult/AllResults.css
@@ -1,15 +1,88 @@
-.alContainer{
+/* Set a fixed width and height for the Lot Date column */
+.resultTable th.lotdate-column,
+.resultTable td.lotdate-column {
+  min-width: 12rem;
+  min-height: 5rem; /* Set the height to 4rem */
+}
+
+/* Set fixed width and height for the Time cells */
+.resultTable th.time-column,
+.resultTable td.time-column {
+    min-width: 8rem;  /* Set the width to 8rem */
+    min-height: 4rem; /* Set the height to 4rem */
+}
+
+/* Set fixed width and height for the Result cells */
+.resultTable td.result-column {
+    min-width: 8rem;  /* Set the width to 8rem */
+    min-height: 4rem; /* Set the height to 4rem */
+}
+
+/* Existing styles for the table */
+.resultTable {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.resultTable th,
+.resultTable td {
+  padding: 1rem;
+  text-align: center;
+  border: 0.1rem solid var(--result_lightblue);
+  background-color: var(--background);
+  
+}
+
+.resultTable th {
+  background-color: var(--result_lightblue);
+  border-radius: 0.5rem;
+  color: white;
+  padding: 1rem;
+  border: 0.2rem solid var(--background);
+}
+
+.tdlabel {
+  color: var(--white_s);
+  font-size: 1.5rem;
+  font-family: "MR";
+  background-color: var(--green);
+}
+
+.time-column{
+    color: var(--white_s);
+    font-size: 1rem;
+    font-family: "MSB";
+}
+
+.thlabel {
+  color: var(--white_s);
+  font-size: 1.5rem;
+  font-family: "MSB";
+  background-color: var(--green);
+}
+
+.tddatelabel {
+  color: var(--white_s);
+  font-size: 1.5rem;
+  font-family: "MSB";
+  background-color: cyan;
+}
+
+/* Add horizontal and vertical scroll behavior */
+
+
+  .alContainer{
     flex: 1;
     display: flex;
     flex-direction: column;
     background: linear-gradient(180deg, #0162AF, #011833);
     border-radius: 1rem;
-}
-
-.ARLC{
+  }
+  
+  .ARLC{
     height: 7rem;
     width: 80vw;
-   background-color: var(--background);
+    background-color: var(--background);
     margin-left: 2rem;
     margin-right: 2rem;
     border-radius: 1rem;
@@ -18,15 +91,15 @@
     justify-content: flex-start;
     align-items: center;
     overflow-x: scroll;
-}
-
-.ARLocConC {
+  }
+  
+  .ARLocConC {
     min-width: 30rem; /* Fixed width for the left container */
     height: 100%;
-
+  
   }
-
-.ARMC{
+  
+  .ARMC{
     background: linear-gradient(180deg, #0162AF, #011833);
     width: 80vw;
     height: 60vh;
@@ -36,18 +109,18 @@
     overflow-y: scroll;
     display: flex;
     flex-direction: row;
-
-}
-
-.ARMCContent{
+  
+  }
+  
+  .ARMCContent{
     width: 20rem;
     height: 100%;
-
+  
     display: flex;
     flex-direction: column;
-}
-
-.ARMCContentTC{
+  }
+  
+  .ARMCContentTC{
     height: 5rem;
     background-color: var(--background);
     margin: 1rem;
@@ -55,11 +128,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.ARMCContentDC{
+  }
+  
+  .ARMCContentDC{
     flex: 1;
- 
+  
     display: flex;
     flex-direction: column;
     position: relative;
@@ -67,8 +140,8 @@
     height: 40vh;
     overflow-y: scroll;
    
-}
-.ARMCContentDConC{
+  }
+  .ARMCContentDConC{
     min-height: 5rem;
     display: flex;
     flex-direction: row;
@@ -76,10 +149,10 @@
     margin-right: 1rem;
     margin-bottom: 0.2rem;
     gap: 2px;
-
-}
-
-.ARMCContentDConCDate{
+  
+  }
+  
+  .ARMCContentDConCDate{
     width: 15rem;
     background-color:  var(--background);
     display: flex;
@@ -87,9 +160,9 @@
     align-items: center;
     border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem;
-}
-
-.ARMCContentDConCResult{
+  }
+  
+  .ARMCContentDConCResult{
     width: 5rem;
     background-color: var(--background);
     display: flex;
@@ -97,4 +170,68 @@
     align-items: center;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
-}
+  }
+  
+  .tdlabel{
+    color: var(--white_s);
+    font-size: 1.5rem;
+    font-family: "MR";
+    background-color: var(--green);
+  }
+
+  .thlabel{
+    color: var(--white_s);
+    font-size: 1.5rem;
+    font-family: "MSB";
+    background-color: var(--green);
+  }
+
+  .tddatelabel{
+    color: var(--white_s);
+    font-size: 1.5rem;
+    font-family: "MSB";
+    background-color: cyan;
+  }
+
+  .stitle{
+    color: var(--background);
+    background-color: var(--green);
+    font-size: 2rem;
+    font-family: "MR";
+    text-align: center;
+    padding: 1rem;
+  }
+
+  .SRMC{
+    background: linear-gradient(180deg, #0162AF, #011833);
+    width: 80vw;
+    height: 50vh;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+  
+  }
+
+  .yeartitle{
+    color: var(--white_s);
+    background-color: var(--background);
+    font-size: 2rem;
+    font-family: "MR";
+    text-align: center;
+    padding: 2rem;
+    margin: 2rem;
+    border-radius: 1rem;
+  }
+
+  .submitTitle{
+    color: var(--white_s);
+    background-color: var(--green);
+    font-size: 2rem;
+    font-family: "MR";
+    text-align: center;
+    padding: 1.5rem;
+    margin: 2rem;
+    border-radius: 1rem;
+  }
