--- a/src/components/alllocation/AllLocation.css
+++ b/src/components/alllocation/AllLocation.css
@@ -87,11 +87,13 @@
 }
 
 .lcnamelimit{
-    flex: 1;
+    width: 40%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .allContentContainer-al:hover{
