--- a/src/components/alllocation/AllLocation.css
+++ b/src/components/alllocation/AllLocation.css
@@ -69,6 +69,7 @@
     font-family: "MR";
     font-size: 2rem;
     border-color: transparent;
+    padding-left: 1rem;
 }
 
 .allContentContainer-al{
