--- a/src/components/history/History.css
+++ b/src/components/history/History.css
@@ -55,8 +55,9 @@
     
 }
 .h-content-fifth{
-    width: 8rem;
-    height: 100%;
+    flex: 0.5;
+   
+
 }
 
 .h-content-first-content{
@@ -118,6 +119,7 @@
     justify-content: center;
     align-items: flex-start;
     flex-direction: row;
+
     
 
 }
